home page changed

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -103,7 +103,7 @@ body {
     color: #fff;
 }
 
-#titleBasketi {
+/* #titleBasketi {
     font-weight: bold;
     color: red;
     padding-top: 40px;
@@ -114,7 +114,7 @@ body {
 #basketi {
     padding: 20px;
     background: #f7f6f5;
-}
+} */
 
 #titleBurgeri {
     font-weight: bold;
