--- a/public/css/home.css
+++ b/public/css/home.css
@@ -48,6 +48,10 @@ body {
     text-decoration: none;
 }
 
+#savat a {
+    color: black;
+}
+
 #Dastavkatashkent {
     font-size: 24px;
     text-align: center;
