--- a/public/css/mycart.css
+++ b/public/css/mycart.css
@@ -2,11 +2,24 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.invisible {
+    display: none;
+    visibility: hidden;
+}
+
 .products-container {
     max-width: 650px;
     justify-content: space-around;
     margin: 0 auto;
     margin-top: 50px;
+}
+
+.products-container ion-icon {
+    font-size: 25px;
+    color: blue;
+    margin-left: 10px;
+    margin-right: 10px;
+    cursor: pointer;
 }
 
 .product-header {
@@ -15,6 +28,7 @@
     display: flex;
     justify-content: flex-start;
     border-bottom: 4px solid lightgray;
+    margin: 0 auto;
 }
 
 .product-title {
@@ -28,10 +42,30 @@
     align-items: center;
 }
 
+.price2 {
+    position: relative;
+    top: -55px;
+    left: 290px;
+    width: 15%;
+    display: flex;
+    align-items: center;
+}
+
 .quantity {
     width: 30%;
     display: flex;
     align-items: center;
+    /* border-bottom: 1px solid lightgray; */
+}
+
+.quantity2 {
+    position: relative;
+    top: -75px;
+    left: 420px;
+    width: 30%;
+    display: flex;
+    align-items: center;
+    /* border-bottom: 1px solid lightgray; */
 }
 
 .total {
@@ -40,10 +74,38 @@
     align-items: center;
 }
 
+.total2 {
+    position: relative;
+    top: -95px;
+    left: 590px;
+    width: 10%;
+    display: flex;
+    align-items: center;
+}
+
 .product {
-    width: 45%;
+    width: 35%;
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding: 10px 0;
+}
+
+.product img {
+    width: 70px;
+}
+
+.basketTotalContainer {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+    padding: 10px 0;
+}
+
+.basketTotalTitle {
+    width: 30%;
+}
+
+.basketTotal {
+    width: 10%;
 }
