--- a/public/css/mycart.css
+++ b/public/css/mycart.css
@@ -109,3 +109,23 @@
 .basketTotal {
     width: 10%;
 }
+
+.btn-submit {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: pointer;
+    position: relative;
+    margin-bottom: 50px;
+    left: 250px;
+    width: 100px;
+    height: 40px;
+    border: 1px solid #cccccc;
+    background: #fff;
+}
+
+.btn-submit:hover {
+    border: 1px solid #fff;
+    background: rgb(252, 99, 99);
+    color: #fff;
+}
